Primer commit con actualización

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>
-        PROYECTO N°2 BOOTCAMP
+        PROYECTO N°3 BOOTCAMP
     </title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,11 +11,11 @@
     <div class="imagentitulo">
       <img src="./logo.jpg" alt="">
     </div>
-          <h1 class="logo">Registro de clientes y entrega de información relevante</h1>
+          <h1 class="logo">Registro de clientes preferenciales</h1>
         <nav>
         <ul>
           <li class="nav"><a class="outline" >Acceso colaboradores</a></li>
-          <li class="nav"><a href="" class="outline">Nuestra historia</a 				</li>
+          <li class="nav"><a href="" class="outline">Comunidades</a 				</li>
         </ul>
       </nav>
   </div>
