--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
         <ul>
           <li class="nav"><a class="outline" >Links de interés</a></li>
-          <li class="nav"><a href="" class="outline">Comunidades</a 				</li>
+          <li class="nav"><a href="./API.html" class="outline">Comunidades</a 				</li>
         </ul>
       </nav>
   </div>
